--- a/src/app/demo/view/overlaysdemo.component.html
+++ b/src/app/demo/view/overlaysdemo.component.html
@@ -56,7 +56,10 @@
 
         <div class="card">
             <h1>Confirm Dialog</h1>
-            <p-confirmDialog header="Confirmation" icon="fa ui-icon-warning" [style]="{width: '425px'}" appendTo="body"></p-confirmDialog>
+            <p-confirmDialog  
+                header="Confirmation" 
+                icon="fa ui-icon-warning" [style]="{width: '425px'}" 
+                appendTo="body"></p-confirmDialog>
 
             <button type="text" (click)="confirm()" pButton icon="fa fa-check" label="Confirm"></button>
         </div>
