--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="ui-g ui-fluid dashboard">
+<div class="ui-g ui-fluid dashboard" *ngIf='isAuthenticated()'>
     <div class="ui-g-12 ui-md-4">
         <div class="card clearfix summary">
             <span class="title">Users</span>
