--- a/src/app/views/users/edit/edituser.component.html
+++ b/src/app/views/users/edit/edituser.component.html
@@ -17,21 +17,21 @@
                         <label for="input">Nombres *</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
-                        <app-input id='firstname' [formGroup]='userform' ></app-input>
+                        <app-input id='name' [formGroup]='userform' ></app-input>
                     </div>
                     <div class="ui-g-12 ui-md-2">
                         <label for="input">Apellidos *</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
-                        <app-input id='surname' [formGroup]='userform' ></app-input>
+                        <app-input id='familyName' [formGroup]='userform' ></app-input>
                     </div>
                 
                 
                     <div class="ui-g-12 ui-md-2">
-                        <label for="username">Nombre de usuario</label>
+                        <label for="email">Nombre de usuario</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
-                        <app-input id='username' [formGroup]='userform' ></app-input>
+                        <app-input id='email' [formGroup]='userform' ></app-input>
                     </div>
                     <div class="ui-g-12 ui-md-2">
                     </div>
