--- a/src/app/views/users/registration/registration.component.html
+++ b/src/app/views/users/registration/registration.component.html
@@ -13,7 +13,7 @@
                 <h1>Creación de usuarios</h1>
                 <!--form [formGroup]="userform" (ngSubmit)="onSubmit()" -->
                 <div class="ui-g form-group">
-                    <div class="ui-g-12 ui-md-2">
+                    <!--div class="ui-g-12 ui-md-2">
                         <label for="input">Nombres *</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
@@ -24,14 +24,14 @@
                     </div>
                     <div class="ui-g-12 ui-md-4">
                         <app-input id='surname' [formGroup]='userform' ></app-input>
-                    </div>
+                    </div-->
                     <div class="ui-g-12 ui-md-2">
                         <label for="input">Email</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
                         <app-input id='email' [formGroup]='userform' ></app-input>
                     </div>
-                    <div class="ui-g-12 ui-md-2">
+                    <!--div class="ui-g-12 ui-md-2">
                         <label for="input">Reescriba Email</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
@@ -60,7 +60,7 @@
                     </div>
                     <div class="ui-g-12 ui-md-4">
                         <p-calendar id="birthdate"></p-calendar>
-                    </div>
+                    </div -->
                     
                     <div class="ui-g-12 ui-md-2">
                         <label for="input">(*) campos obligatorios</label>
