Integracion con mercadopago

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" [ngClass]="{'sidebar-inactive-l':menuInactiveDesktop, 'sidebar-active-m':menuActiveMobile}">
+<!--div class="wrapper" [ngClass]="{'sidebar-inactive-l':menuInactiveDesktop, 'sidebar-active-m':menuActiveMobile}">
     <div>
         <p-dialog header="Cambio de contraseña" [(visible)]="passwordExpired" 
                 modal="modal" showEffect="fade" [style]="{width: '450px'}" appendTo="body">
@@ -110,11 +110,11 @@
     <div class="main">
         <div *ngIf='isExecuting()'>
             <p-progressBar   mode="indeterminate"></p-progressBar>
-        </div>
+        </div -->
         <router-outlet></router-outlet>
-    </div>
+    <!-- /div>
     <div class="footer">
         <img src="assets/layout/images/logo-colored.png" alt="" width="32">
         <span class="footer-text">Intrale: Artesanías en software</span>
     </div>
-</div>
+</div-->
