--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                     <ng-template let-product pTemplate="listItem">
                         <div class="ui-g" style="padding: 2em;border-bottom: 1px solid #d9d9d9">
                             <div class="ui-g-12 ui-md-3" style="text-align:center">
-                                <img src="{{product.picture_url}}.webp">
+                                <img src="{{product.picture_url}}">
                             </div>
                             <div class="ui-g-12 ui-md-8 car-details">
                                 <div class="ui-g">
@@ -57,7 +57,7 @@
                     <ng-template let-car pTemplate="gridItem">
                         <div style="padding:.5em" class="ui-g-12 ui-md-3">
                             <p-panel [header]="product.id" [style]="{'text-align':'center'}">
-                                <img src="{{product.picture_url}} - Grande.webp">
+                                <img src="{{product.picture_url}}.webp">
                                 <!--div class="car-detail">{{car.year}} - {{car.color}}</div-->
                                 <hr class="ui-widget-content" style="border-top:0">
                                 <button pButton type="button" icon="pi pi-search" style="margin-top:0"></button>
