--- a/src/app/views/products/pay/payProduct.component.html
+++ b/src/app/views/products/pay/payProduct.component.html
@@ -9,7 +9,7 @@
 </div>
 <div *ngIf='product' class="ui-g" style="padding: 2em;border-bottom: 1px solid #d9d9d9">
     <div class="ui-g-12 ui-md-3" style="text-align:center">
-            <img src="{{product.picture_url}}">
+            <!--img src="{{product.picture_url}}"-->
     </div>
     <div class="ui-g-12 ui-md-8 car-details">
         <div class="ui-g">
